--- a/family-tree.html
+++ b/family-tree.html
@@ -186,15 +186,27 @@
             <p>My lineage is a sacred thread woven through the tapestry of time, connecting me to the origins of creation and the divine figures who shaped history. This family tree is not merely a record of ancestry but a cosmic blueprint, encoded with the torus energy that flows through my veins, guiding my mission to heal the matrix and restore divinity to humanity.</p>
             <ul>
                 <li><strong>Gaia:</strong> The Earth Mother, the primordial essence of creation, from whom all life springs.</li>
-                <li><strong>Noah:</strong> The ark’s builder, who preserved humanity through the Great Flood, a steward of life’s continuity.</li>
+                <li><strong>Noah:</strong> The ark’s builder, who preserved humanity through the Great Flood, a steward of life’s continuity (10th generation of humans).</li>
+                <li><strong>Abraham:</strong> The patriarch of faith, who forged a covenant with the divine, representing the 20th generation of humanity.</li>
+                <li><strong>Judah:</strong> The lion of the royal line, progenitor of the tribe that birthed kings and messiahs, whose legacy exceeds all tribes of Israel (1 Chronicles 5:2).</li>
+                <li><strong>Pharez:</strong> Son of Judah, whose descendants were esteemed, their name used in blessings, such as to Boaz upon his marriage to Ruth.</li>
+                <li><strong>Boaz:</strong> A righteous man of Judah’s line, husband of Ruth, representing the 30th generation of humanity.</li>
+                <li><strong>Obed:</strong> Son of Boaz and Ruth, a key link in the lineage leading to King David.</li>
+                <li><strong>Jesse:</strong> Father of King David, a humble shepherd whose line carried the promise of the Messiah.</li>
                 <li><strong>King David:</strong> The anointed shepherd-king of Israel, a warrior and poet whose heart was aligned with the divine.</li>
-                <li><strong>Juddah:</strong> The lion of the royal line, progenitor of the tribe that birthed kings and messiahs.</li>
+                <li><strong>Solomon:</strong> Son of David, the wise king who built the First Temple, a symbol of divine wisdom.</li>
+                <li><strong>Rehoboam:</strong> Son of Solomon, whose reign marked the division of the kingdom, yet continued the royal line.</li>
+                <li><strong>Zerubbabel:</strong> A leader of the return from Babylonian exile, who rebuilt the Temple, a descendant of David’s line.</li>
                 <li><strong>Anna:</strong> The holy grandmother of Jesus, keeper of the Grail’s wisdom and bearer of sacred knowledge.</li>
+                <li><strong>Joseph of Arimathea:</strong> A descendant of the Davidic line, who provided the tomb for Jesus, and a guardian of the Holy Grail.</li>
                 <li><strong>Jesus Christ:</strong> The divine savior, whose light pierces the veil of illusion, guiding humanity to salvation.</li>
+                <li><strong>Merlin:</strong> The legendary wizard, a descendant of the sacred line, who guided King Arthur with mystical wisdom.</li>
                 <li><strong>King Arthur:</strong> The once and future king of Camelot, a symbol of justice and the quest for the Holy Grail.</li>
                 <li><strong>Bran the Blessed:</strong> The raven-hearted guardian of Britain’s soul, a giant of wisdom and protector of the land.</li>
                 <li><strong>Beli Mawr:</strong> The ancient Welsh king of the gods, a celestial ancestor whose light shines through the ages.</li>
                 <li><strong>Rhodri Mawr:</strong> The unifier of Wales, a king whose vision of unity echoes in my mission to unite New Zealand.</li>
+                <li><strong>Llywelyn the Great:</strong> A Welsh prince who defended his people’s sovereignty, a descendant of Rhodri Mawr.</li>
+                <li><strong>Owain Glyndŵr:</strong> The last native Prince of Wales, a revolutionary leader whose spirit of independence lives on.</li>
                 <li><strong>Jacob Ryan Judah Clement Mawr Dawn:</strong> The God-King of the Torus, born to resurrect the Roman Empire, launch CLEM crypto, and lead humanity to Giza’s truth.</li>
             </ul>
             <p>This sacred lineage is a testament to my divine purpose, a lineage of light that stretches from the dawn of creation to the present day, guiding me as the three-eyed raven with its halo illuminates my path.</p>
