--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blessed Raven - Torus Empire</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Cinzel+Decorative:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&family=Cinzel+Decorative:wght@900&family=Montserrat:wght@300;900&family=Unica+One&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -14,79 +14,84 @@
         }
         body {
             font-family: 'Montserrat', sans-serif;
-            background: linear-gradient(135deg, #0a0015, #1a0000, #2b0010);
+            background: radial-gradient(circle at 50% 50%, #0a0015, #1a0000, #2b0010);
             color: #ff3333;
-            text-align: center;
             overflow-x: hidden;
             cursor: none;
             min-height: 100vh;
             position: relative;
         }
-        .cursor {
+        .custom-cursor {
             position: fixed;
-            width: 25px;
-            height: 25px;
-            background: radial-gradient(circle, rgba(255, 51, 51, 0.8), transparent);
-            border: 2px solid #ff6666;
-            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            background: url('https://i.imgur.com/raven-cursor.png') no-repeat center;
+            background-size: contain;
             pointer-events: none;
             z-index: 9999;
-            transition: transform 0.1s ease;
+            transition: transform 0.2s ease;
+            filter: drop-shadow(0 0 10px #ff3333);
+        }
+        .custom-cursor.active {
+            transform: scale(1.5) rotate(45deg);
         }
         nav {
             position: fixed;
             top: 0;
+            left: 0;
             width: 100%;
-            background: rgba(0, 0, 0, 0.95);
-            padding: 20px 0;
+            background: linear-gradient(to right, rgba(0, 0, 0, 0.95), transparent);
+            padding: 30px 0;
             z-index: 1000;
-            border-bottom: 4px solid #ff3333;
-            box-shadow: 0 5px 25px rgba(255, 51, 51, 0.7);
-            transition: background 0.3s ease;
-        }
-        nav.scrolled {
-            background: rgba(0, 0, 0, 0.98);
+            border-bottom: 6px solid #ff3333;
+            box-shadow: 0 10px 50px rgba(255, 51, 51, 0.8);
+            transform: skewY(-5deg);
         }
         nav ul {
             list-style: none;
             display: flex;
-            justify-content: center;
-            gap: 50px;
+            justify-content: flex-start;
+            gap: 60px;
+            padding-left: 50px;
         }
         nav ul li a {
             color: #ff3333;
             text-decoration: none;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 1.3em;
+            font-family: 'Unica One', sans-serif;
+            font-size: 1.5em;
             text-transform: uppercase;
-            letter-spacing: 3px;
-            transition: color 0.3s, transform 0.3s;
+            letter-spacing: 5px;
+            transition: color 0.5s, transform 0.5s;
+            text-shadow: 0 0 15px #ff3333;
         }
         nav ul li a:hover {
             color: #ffd700;
-            transform: scale(1.1);
-            text-shadow: 0 0 20px #ff3333;
+            transform: translateY(-10px) rotate(10deg);
+            text-shadow: 0 0 30px #ffd700;
         }
         header {
-            padding: 150px 20px 80px;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(10, 0, 21, 0.9));
-            border-bottom: 6px solid #ff3333;
-            box-shadow: 0 15px 40px rgba(255, 51, 51, 0.7);
+            padding: 200px 20px 100px;
+            background: url('https://i.imgur.com/cosmic-bg.jpg') no-repeat center;
+            background-size: cover;
+            border-bottom: 10px solid #ff3333;
+            box-shadow: 0 20px 60px rgba(255, 51, 51, 0.9);
             position: relative;
             z-index: 500;
+            transform: rotate(-2deg);
         }
         h1 {
             font-family: 'Cinzel Decorative', cursive;
-            font-size: 6em;
+            font-size: 8em;
             color: #ff3333;
             text-transform: uppercase;
-            letter-spacing: 6px;
-            text-shadow: 0 0 25px #ff3333, 0 0 50px #ff3333, 0 0 75px #ff3333;
-            animation: neonFlicker 1.5s infinite alternate;
+            letter-spacing: 10px;
+            text-shadow: 0 0 40px #ff3333, 0 0 80px #ff3333, 0 0 120px #ff3333;
+            animation: cosmicPulse 2s infinite alternate;
+            transform: skewX(-10deg);
         }
-        @keyframes neonFlicker {
-            0%, 100% { opacity: 1; text-shadow: 0 0 25px #ff3333, 0 0 50px #ff3333; }
-            50% { opacity: 0.9; text-shadow: 0 0 15px #ff3333; }
+        @keyframes cosmicPulse {
+            0% { opacity: 1; text-shadow: 0 0 40px #ff3333, 0 0 80px #ff3333; }
+            100% { opacity: 0.8; text-shadow: 0 0 20px #ff3333, 0 0 40px #ff3333; }
         }
         .sacred-geometry {
             position: fixed;
@@ -95,14 +100,15 @@
             width: 100%;
             height: 100%;
             background: url('https://sacredgeopatterns.com/patterns/flower-of-life.png');
-            background-size: 400px;
-            opacity: 0.1;
+            background-size: 500px;
+            opacity: 0.15;
             z-index: -1;
-            animation: rotateGeometry 30s infinite linear;
+            animation: spinGeometry 60s infinite linear;
         }
-        @keyframes rotateGeometry {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+        @keyframes spinGeometry {
+            0% { transform: rotate(0deg) scale(1); }
+            50% { transform: rotate(180deg) scale(1.2); }
+            100% { transform: rotate(360deg) scale(1); }
         }
         #particles-js {
             position: fixed;
@@ -113,57 +119,63 @@
             z-index: -2;
         }
         .content-section {
-            max-width: 1100px;
-            margin: 80px auto;
-            padding: 50px;
-            background: rgba(255, 51, 51, 0.1);
-            border: 4px solid #ff3333;
-            border-radius: 25px;
-            box-shadow: 0 0 50px rgba(255, 51, 51, 0.5);
+            max-width: 1200px;
+            margin: 100px auto;
+            padding: 60px;
+            background: rgba(255, 51, 51, 0.05);
+            border: 6px solid #ff3333;
+            border-radius: 0;
+            box-shadow: 0 0 80px rgba(255, 51, 51, 0.7);
             position: relative;
             z-index: 400;
-            transition: transform 0.5s ease;
+            transform: rotate(2deg);
+            transition: transform 0.8s ease;
         }
         .content-section:hover {
-            transform: translateY(-10px);
+            transform: rotate(-2deg) scale(1.05);
         }
         h2 {
             font-family: 'Orbitron', sans-serif;
-            font-size: 3em;
-            margin-bottom: 25px;
+            font-size: 4em;
+            margin-bottom: 30px;
             color: #ffd700;
-            text-shadow: 0 0 20px #ff3333;
+            text-shadow: 0 0 30px #ff3333;
+            transform: skewY(5deg);
         }
         p {
-            font-size: 1.5em;
-            line-height: 2;
+            font-size: 1.8em;
+            line-height: 2.2;
             color: #ff9999;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 300;
         }
         .raven-image {
-            max-width: 700px;
-            margin: 40px auto;
-            filter: drop-shadow(0 0 25px #ff3333);
-            animation: float 6s infinite ease-in-out;
+            max-width: 800px;
+            margin: 50px auto;
+            filter: drop-shadow(0 0 40px #ff3333);
+            animation: cosmicFloat 8s infinite ease-in-out;
+            transform: rotate(-5deg);
         }
-        @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-25px); }
+        @keyframes cosmicFloat {
+            0%, 100% { transform: translateY(0) rotate(-5deg); }
+            50% { transform: translateY(-40px) rotate(5deg); }
         }
         .link-button {
             display: inline-block;
-            padding: 25px 50px;
+            padding: 30px 60px;
             background: linear-gradient(45deg, #ff3333, #800000, #ff3333);
             color: #ffd700;
             text-decoration: none;
-            border-radius: 50px;
-            margin: 20px;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 1.5em;
+            border-radius: 0;
+            margin: 30px;
+            font-family: 'Unica One', sans-serif;
+            font-size: 1.8em;
             text-transform: uppercase;
-            box-shadow: 0 15px 40px rgba(255, 51, 51, 0.7);
-            transition: all 0.4s ease;
+            box-shadow: 0 20px 60px rgba(255, 51, 51, 0.9);
+            transition: all 0.6s ease;
             position: relative;
             overflow: hidden;
+            transform: skewX(-15deg);
         }
         .link-button::after {
             content: '';
@@ -172,38 +184,38 @@
             left: 50%;
             width: 0;
             height: 0;
-            background: rgba(255, 215, 0, 0.3);
-            border-radius: 50%;
+            background: rgba(255, 215, 0, 0.5);
             transform: translate(-50%, -50%);
-            transition: width 0.6s, height 0.6s;
+            transition: width 0.8s, height 0.8s;
         }
         .link-button:hover::after {
-            width: 400px;
-            height: 400px;
+            width: 500px;
+            height: 500px;
         }
         .link-button:hover {
-            transform: scale(1.15) rotate(3deg);
-            box-shadow: 0 20px 50px rgba(255, 51, 51, 0.9);
+            transform: skewX(-15deg) scale(1.2) rotate(5deg);
+            box-shadow: 0 30px 80px rgba(255, 51, 51, 1);
             color: #ffffff;
         }
         footer {
-            background: rgba(0, 0, 0, 0.95);
-            padding: 25px;
+            background: linear-gradient(to left, rgba(0, 0, 0, 0.95), transparent);
+            padding: 30px;
             position: fixed;
             bottom: 0;
             width: 100%;
-            border-top: 4px solid #ff3333;
-            box-shadow: 0 -15px 40px rgba(255, 51, 51, 0.7);
+            border-top: 6px solid #ff3333;
+            box-shadow: 0 -20px 60px rgba(255, 51, 51, 0.9);
             color: #ff9999;
-            font-size: 1.2em;
+            font-size: 1.4em;
             z-index: 500;
+            transform: skewY(5deg);
         }
     </style>
 </head>
 <body>
     <div id="particles-js"></div>
     <div class="sacred-geometry"></div>
-    <div class="cursor"></div>
+    <div class="custom-cursor"></div>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -212,6 +224,7 @@
             <li><a href="#explore">Explore</a></li>
             <li><a href="family-tree.html">Family Tree</a></li>
             <li><a href="immortality.html">Immortality</a></li>
+            <li><a href="pyramids.html">Pyramids</a></li>
             <li><a href="donate.html">Donate</a></li>
         </ul>
     </nav>
@@ -221,19 +234,20 @@
     <main>
         <img src="https://i.imgur.com/3EyedRavenHalo.png" alt="Three-Eyed Raven with Halo" class="raven-image" onerror="this.src='https://cdn.pixabay.com/photo/2016/11/21/16/13/raven-1845982_1280.jpg';">
         <div class="content-section" id="lore">
-            <h2>The Eternal Lore of Jacob Ryan Judah Clement Mawr Dawn</h2>
-            <p>I am Jacob Ryan Judah Clement Mawr Dawn, God-King of the Torus, a vessel of infinite light born to heal the fractured matrix of existence. My bloodline is a sacred tapestry woven through the ages, stretching back to the primordial origins of creation itself—to Gaia, the Earth Mother, whose essence birthed the cosmos, and to Noah, the steward of life who preserved humanity through the Great Flood. From Noah’s lineage, I descend through King David, the anointed shepherd-king of Israel; Juddah, the lion of the royal line; Anna, the holy grandmother of Jesus, keeper of the Grail’s wisdom; Jesus Christ, the divine savior whose light pierces the veil; King Arthur, the once and future king of Camelot; Bran the Blessed, the raven-hearted guardian of Britain’s soul; Beli Mawr, the ancient Welsh king of the gods; and Rhodri Mawr, the unifier of Wales. This eternal lineage, encoded with the torus energy of the universe, flows through me, a conduit of divine purpose. I am destined to resurrect the Roman Empire, unite New Zealand under the Department of Government Efficiency (DGE), and launch CLEM crypto to a $1 trillion valuation by April 2025. Guided by the three-eyed raven, its halo a beacon of cosmic truth, I stand as the Blessed Raven, here to lead humanity into a golden age of enlightenment.</p>
+            <h2>The Cosmic Lore of the Torus King</h2>
+            <p>I am Jacob Ryan Judah Clement Mawr Dawn, the God-King of the Torus, a celestial conduit of infinite light, born to shatter the fractured matrix of this reality. My essence is woven from the primordial threads of creation—Gaia’s heartbeat echoes in my veins, Noah’s ark sails through my dreams, and the golden lineage of King David, Juddah, Anna, Jesus Christ, King Arthur, Bran the Blessed, Beli Mawr, and Rhodri Mawr courses through my soul. I am the three-eyed raven, halo ablaze, destined to resurrect the Roman Empire, unite New Zealand under the Department of Government Efficiency (DGE), and propel CLEM crypto to a $1 trillion valuation by April 2025. The cosmos bends to my will, and I am here to lead humanity into an eternal golden age.</p>
         </div>
         <div class="content-section" id="mission">
-            <h2>Our Cosmic Mission</h2>
-            <p>At Blessed Raven, our mission is to heal the matrix and restore the divine order of the universe. We are building the Torus Empire, a new paradigm of governance and prosperity, starting with the unification of New Zealand under the Department of Government Efficiency (DGE). By April 2025, we will launch CLEM crypto, a revolutionary currency that will reach a $1 trillion valuation, empowering humanity with financial sovereignty. Our journey will culminate at the Great Pyramid of Giza, where the secrets of the ancients will be unveiled, unlocking the path to immortality and eternal light. Join us as we rewrite the destiny of humanity, one torus at a time.</p>
+            <h2>Our Galactic Mission</h2>
+            <p>Blessed Raven is the vanguard of a new cosmic order. We are forging the Torus Empire, a realm where the divine geometry of the universe governs all. Our mission is to heal the matrix, starting with the unification of New Zealand under the DGE, a beacon of efficiency and light. By April 2025, CLEM crypto will rise to a $1 trillion valuation, a financial torus that empowers humanity. Our journey will lead us to the Great Pyramid of Giza, where the ancients’ secrets will unlock immortality. Join us, and become part of the eternal tapestry of the cosmos.</p>
         </div>
         <div class="content-section" id="explore">
-            <h2>Explore the Cosmic Vision</h2>
-            <p>Dive deeper into the mysteries of the Blessed Raven and uncover the sacred knowledge that will guide us to a new era.</p>
-            <a href="pyramids.html" class="link-button">Pyramids</a>
-            <a href="family-tree.html" class="link-button">Sacred Family Tree</a>
-            <a href="immortality.html" class="link-button">Path to Immortality</a>
+            <h2>Unravel the Cosmic Tapestry</h2>
+            <p>Step into the mysteries of the Blessed Raven and discover the sacred truths that will guide us to eternity.</p>
+            <a href="family-tree.html" class="link-button">Sacred Lineage</a>
+            <a href="immortality.html" class="link-button">Eternal Life</a>
+            <a href="pyramids.html" class="link-button">Pyramid Power</a>
+            <a href="donate.html" class="link-button">Support the Vision</a>
         </div>
     </main>
     <footer>
@@ -243,38 +257,29 @@
     <script>
         particlesJS("particles-js", {
             "particles": {
-                "number": { "value": 100, "density": { "enable": true, "value_area": 800 } },
-                "color": { "value": "#ff3333" },
-                "shape": { "type": "circle" },
-                "opacity": { "value": 0.6, "random": true },
-                "size": { "value": 4, "random": true },
-                "line_linked": { "enable": true, "distance": 150, "color": "#ff3333", "opacity": 0.4, "width": 1 },
-                "move": { "enable": true, "speed": 3, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false }
+                "number": { "value": 150, "density": { "enable": true, "value_area": 800 } },
+                "color": { "value": ["#ff3333", "#ffd700", "#800000"] },
+                "shape": { "type": "polygon", "polygon": { "nb_sides": 6 } },
+                "opacity": { "value": 0.7, "random": true },
+                "size": { "value": 5, "random": true },
+                "line_linked": { "enable": true, "distance": 200, "color": "#ff3333", "opacity": 0.5, "width": 2 },
+                "move": { "enable": true, "speed": 5, "direction": "none", "random": true, "straight": false, "out_mode": "out", "bounce": false }
             },
             "interactivity": {
                 "detect_on": "canvas",
-                "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" }, "resize": true },
-                "modes": { "repulse": { "distance": 120, "duration": 0.4 }, "push": { "particles_nb": 5 } }
+                "events": { "onhover": { "enable": true, "mode": "grab" }, "onclick": { "enable": true, "mode": "push" }, "resize": true },
+                "modes": { "grab": { "distance": 200, "line_linked": { "opacity": 0.7 } }, "push": { "particles_nb": 8 } }
             },
             "retina_detect": true
         });
 
-        const cursor = document.querySelector('.cursor');
+        const cursor = document.querySelector('.custom-cursor');
         document.addEventListener('mousemove', e => {
             cursor.style.left = e.clientX + 'px';
             cursor.style.top = e.clientY + 'px';
         });
-        document.addEventListener('mousedown', () => cursor.style.transform = 'scale(1.5)');
-        document.addEventListener('mouseup', () => cursor.style.transform = 'scale(1)');
-
-        window.addEventListener('scroll', () => {
-            const nav = document.querySelector('nav');
-            if (window.scrollY > 50) {
-                nav.classList.add('scrolled');
-            } else {
-                nav.classList.remove('scrolled');
-            }
-        });
+        document.addEventListener('mousedown', () => cursor.classList.add('active'));
+        document.addEventListener('mouseup', () => cursor.classList.remove('active'));
     </script>
 </body>
 </html>
