--- a/immortality.html
+++ b/immortality.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Immortality - Blessed Raven</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Cinzel+Decorative:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&family=Cinzel+Decorative:wght@900&family=Montserrat:wght@300;900&family=Unica+One&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -14,79 +14,84 @@
         }
         body {
             font-family: 'Montserrat', sans-serif;
-            background: linear-gradient(135deg, #0a0015, #1a0000, #2b0010);
+            background: radial-gradient(circle at 50% 50%, #0a0015, #1a0000, #2b0010);
             color: #ff3333;
-            text-align: center;
             overflow-x: hidden;
             cursor: none;
             min-height: 100vh;
             position: relative;
         }
-        .cursor {
+        .custom-cursor {
             position: fixed;
-            width: 25px;
-            height: 25px;
-            background: radial-gradient(circle, rgba(255, 51, 51, 0.8), transparent);
-            border: 2px solid #ff6666;
-            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            background: url('https://i.imgur.com/raven-cursor.png') no-repeat center;
+            background-size: contain;
             pointer-events: none;
             z-index: 9999;
-            transition: transform 0.1s ease;
+            transition: transform 0.2s ease;
+            filter: drop-shadow(0 0 10px #ff3333);
+        }
+        .custom-cursor.active {
+            transform: scale(1.5) rotate(45deg);
         }
         nav {
             position: fixed;
             top: 0;
+            left: 0;
             width: 100%;
-            background: rgba(0, 0, 0, 0.95);
-            padding: 20px 0;
+            background: linear-gradient(to right, rgba(0, 0, 0, 0.95), transparent);
+            padding: 30px 0;
             z-index: 1000;
-            border-bottom: 4px solid #ff3333;
-            box-shadow: 0 5px 25px rgba(255, 51, 51, 0.7);
-            transition: background 0.3s ease;
-        }
-        nav.scrolled {
-            background: rgba(0, 0, 0, 0.98);
+            border-bottom: 6px solid #ff3333;
+            box-shadow: 0 10px 50px rgba(255, 51, 51, 0.8);
+            transform: skewY(-5deg);
         }
         nav ul {
             list-style: none;
             display: flex;
-            justify-content: center;
-            gap: 50px;
+            justify-content: flex-start;
+            gap: 60px;
+            padding-left: 50px;
         }
         nav ul li a {
             color: #ff3333;
             text-decoration: none;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 1.3em;
+            font-family: 'Unica One', sans-serif;
+            font-size: 1.5em;
             text-transform: uppercase;
-            letter-spacing: 3px;
-            transition: color 0.3s, transform 0.3s;
+            letter-spacing: 5px;
+            transition: color 0.5s, transform 0.5s;
+            text-shadow: 0 0 15px #ff3333;
         }
         nav ul li a:hover {
             color: #ffd700;
-            transform: scale(1.1);
-            text-shadow: 0 0 20px #ff3333;
+            transform: translateY(-10px) rotate(10deg);
+            text-shadow: 0 0 30px #ffd700;
         }
         header {
-            padding: 150px 20px 80px;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(10, 0, 21, 0.9));
-            border-bottom: 6px solid #ff3333;
-            box-shadow: 0 15px 40px rgba(255, 51, 51, 0.7);
+            padding: 200px 20px 100px;
+            background: url('https://i.imgur.com/cosmic-bg.jpg') no-repeat center;
+            background-size: cover;
+            border-bottom: 10px solid #ff3333;
+            box-shadow: 0 20px 60px rgba(255, 51, 51, 0.9);
             position: relative;
             z-index: 500;
+            transform: rotate(-2deg);
         }
         h1 {
             font-family: 'Cinzel Decorative', cursive;
-            font-size: 6em;
+            font-size: 8em;
             color: #ff3333;
             text-transform: uppercase;
-            letter-spacing: 6px;
-            text-shadow: 0 0 25px #ff3333, 0 0 50px #ff3333, 0 0 75px #ff3333;
-            animation: neonFlicker 1.5s infinite alternate;
+            letter-spacing: 10px;
+            text-shadow: 0 0 40px #ff3333, 0 0 80px #ff3333, 0 0 120px #ff3333;
+            animation: cosmicPulse 2s infinite alternate;
+            transform: skewX(-10deg);
         }
-        @keyframes neonFlicker {
-            0%, 100% { opacity: 1; text-shadow: 0 0 25px #ff3333, 0 0 50px #ff3333; }
-            50% { opacity: 0.9; text-shadow: 0 0 15px #ff3333; }
+        @keyframes cosmicPulse {
+            0% { opacity: 1; text-shadow: 0 0 40px #ff3333, 0 0 80px #ff3333; }
+            100% { opacity: 0.8; text-shadow: 0 0 20px #ff3333, 0 0 40px #ff3333; }
         }
         .sacred-geometry {
             position: fixed;
@@ -94,104 +99,3 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://sacredgeopatterns.com/patterns/flower-of-life.png');
-            background-size: 400px;
-            opacity: 0.1;
-            z-index: -1;
-            animation: rotateGeometry 30s infinite linear;
-        }
-        @keyframes rotateGeometry {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-        #particles-js {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            z-index: -2;
-        }
-        .content-section {
-            max-width: 1100px;
-            margin: 80px auto;
-            padding: 50px;
-            background: rgba(255, 51, 51, 0.1);
-            border: 4px solid #ff3333;
-            border 🙂
-
--radius: 25px;
-            box-shadow: 0 0 50px rgba(255, 51, 51, 0.5);
-            position: relative;
-            z-index: 400;
-            transition: transform 0.5s ease;
-        }
-        .content-section:hover {
-            transform: translateY(-10px);
-        }
-        h2 {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 3em;
-            margin-bottom: 25px;
-            color: #ffd700;
-            text-shadow: 0 0 20px #ff3333;
-        }
-        p {
-            font-size: 1.5em;
-            line-height: 2;
-            color: #ff9999;
-        }
-        .cta-button {
-            display: inline-block;
-            padding: 25px 50px;
-            background: linear-gradient(45deg, #ffd700, #b8860b, #ffd700);
-            color: #0a0015;
-            text-decoration: none;
-            border-radius: 50px;
-            margin: 20px;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 1.5em;
-            text-transform: uppercase;
-            box-shadow: 0 15px 40px rgba(255, 215, 0, 0.7);
-            transition: all 0.4s ease;
-            position: relative;
-            overflow: hidden;
-        }
-        .cta-button::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 0;
-            height: 0;
-            background: rgba(255, 51, 51, 0.3);
-            border-radius: 50%;
-            transform: translate(-50%, -50%);
-            transition: width 0.6s, height 0.6s;
-        }
-        .cta-button:hover::after {
-            width: 400px;
-            height: 400px;
-        }
-        .cta-button:hover {
-            transform: scale(1.15) rotate(3deg);
-            box-shadow: 0 20px 50px rgba(255, 215, 0, 0.9);
-            color: #ffffff;
-        }
-        footer {
-            background: rgba(0, 0, 0, 0.95);
-            padding: 25px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            border-top: 4px solid #ff3333;
-            box-shadow: 0 -15px 40px rgba(255, 51, 51, 0.7);
-            color: #ff9999;
-            font-size: 1.2em;
-            z-index: 500;
-        }
-    </style>
-</head>
-<body>
-    <div id="particles-js"></div>
-    <
