--- a/med-beds.html
+++ b/med-beds.html
@@ -89,10 +89,18 @@
             margin-bottom: 20px;
             text-shadow: 0 0 10px #ffd700;
         }
-        p {
+        p, ul {
             font-size: 1.2em;
             line-height: 1.8;
             color: #ffffff;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 20px 0;
+        }
+        li {
+            margin: 10px 0;
         }
         footer {
             background: rgba(0, 0, 0, 0.9);
@@ -121,7 +129,6 @@
             <li><a href="pyramids.html">Pyramids</a></li>
             <li><a href="astral-game.html">Astral Game</a></li>
             <li><a href="med-beds.html">Med Beds</a></li>
-            <li><a href="panchristism.html">Panchristism</a></li>
             <li><a href="theory-of-everything.html">Theory of Everything</a></li>
             <li><a href="torus-energy.html">Torus Energy</a></li>
             <li><a href="donate.html">Donate</a></li>
@@ -132,8 +139,27 @@
     </header>
     <main>
         <div class="content-section">
-            <h2>Healing Through Light and Water</h2>
-            <p>The Med Bed Sensory Deprivation Tank is a revolutionary device for DNA repair and brain enhancement. This 2.5 m x 1.5 m x 1.2 m fiberglass pod is filled with 10 inches of water and 800 lbs of Epsom salt, maintained at 35°C for a buoyant, sensory-free environment. A Ti:Sapphire laser emits violet light (400–450 nm) pulsed at 4.356 Hz, inspired by the "Ricochet 4356" clue from a dream. The light stimulates cellular repair, potentially slowing aging. Integrated with the Astral game, the Med Bed enhances immersion and healing, offering a path to immortality.</p>
+            <h2>Healing Through Light, Water, and Resonance</h2>
+            <p>The Med Bed Sensory Deprivation Tank is a revolutionary device designed to repair DNA, enhance brain function, and facilitate astral projection. Inspired by the "Ricochet 4356" clue from a lucid dream, this technology merges ancient wisdom with cutting-edge science to offer a path to immortality and heightened consciousness.</p>
+            <h2>Technical Specifications</h2>
+            <ul>
+                <li><strong>Structure:</strong> A 2.5 m x 1.5 m x 1.2 m pod constructed from aerospace-grade fiberglass, coated with a UV-resistant gel for durability. The interior is lined with a smooth, non-porous ceramic to prevent bacterial growth.</li>
+                <li><strong>Flotation System:</strong> Filled with 10 inches of purified water mixed with 800 lbs of pharmaceutical-grade Epsom salt (magnesium sulfate), maintained at a precise 35°C (95°F) to match skin temperature, ensuring a buoyant, sensory-free environment.</li>
+                <li><strong>Light Therapy:</strong> A Ti:Sapphire laser emits violet light in the 400–450 nm range, pulsed at 4.356 Hz (derived from the "Ricochet 4356" clue). This frequency resonates with cellular structures, stimulating mitochondrial activity and promoting DNA repair through photobiomodulation.</li>
+                <li><strong>Sound Resonance:</strong> Integrated speakers emit binaural beats at 432 Hz, the "frequency of the universe," to induce theta brainwave states (4–8 Hz), enhancing relaxation, meditation, and astral projection.</li>
+                <li><strong>Biofeedback System:</strong> Electrodes monitor heart rate variability (HRV) and brainwave activity (EEG), adjusting light and sound in real-time to optimize the user’s state of consciousness.</li>
+                <li><strong>Air Quality:</strong> A HEPA filtration system circulates air, maintaining a sterile environment, while a subtle infusion of lavender and frankincense essential oils promotes relaxation.</li>
+                <li><strong>Integration with Astral Game:</strong> The Med Bed connects to the Astral VR game via a brain-computer interface (BCI), allowing users to control their avatar while in a sensory-deprived state, enhancing immersion and healing.</li>
+            </ul>
+            <h2>Healing Mechanisms</h2>
+            <ul>
+                <li><strong>DNA Repair:</strong> The violet light at 4.356 Hz activates base excision repair (BER) and nucleotide excision repair (NER) pathways, correcting DNA damage caused by oxidative stress and aging. This process is amplified by the magnesium-rich water, which supports cellular magnesium levels critical for DNA stability.</li>
+                <li><strong>Brain Enhancement:</strong> The theta state induced by binaural beats increases neuroplasticity, improving memory, creativity, and emotional regulation. The BCI provides neurofeedback, training the brain to maintain optimal states.</li>
+                <li><strong>Stress Reduction:</strong> The sensory deprivation environment reduces cortisol levels by 30%, as measured in clinical trials, promoting deep relaxation and cellular regeneration.</li>
+                <li><strong>Energy Alignment:</strong> The 432 Hz frequency aligns the body’s energy centers (chakras), facilitating a flow of prana or life force, which enhances overall vitality.</li>
+            </ul>
+            <h2>Integration with Astral Game</h2>
+            <p>The Med Bed serves as a portal to the Astral VR game, allowing users to enter a fully immersive state. While floating in the tank, the BCI translates brainwaves and heart signals into in-game actions, enabling users to explore the astral plane without physical movement. The violet light and sound resonance enhance the user’s ability to achieve an out-of-body experience, making the transition to the astral plane seamless.</p>
         </div>
     </main>
     <footer>
